syntax = "proto3";

package feedfetcher;

service FeedFetcherGrpc {
  rpc FetchFeed (FetchDetails) returns (FetchFeedDetailsDto) {}
}

message FetchDetails {
  string url = 1;
  optional bool executeFetch = 2;
  optional bool executeFetchIfNotExists = 3;
}

message FetchFeedDetailsDto {
  message FetchFeedResponseDto {
    int32 statusCode = 1;
    optional string body = 2;
  }
  string requestStatus = 1;
  optional FetchFeedResponseDto response = 2;
}
